Input from Search and Login Lenght fixed

--- a/data/stylesheets/orbui.css
+++ b/data/stylesheets/orbui.css
@@ -136,3 +136,13 @@ form fieldset table{
 form label{
     font-weight:bold;
 }
+/*
+---  INPUT  ---
+              */
+table#tsearch input{
+    max-width:146px;
+}
+#loginForm input {
+    width: 146px;
+    margin-left:10px;
+}
