--- a/data/stylesheets/orbui.css
+++ b/data/stylesheets/orbui.css
@@ -54,6 +54,9 @@ padding-right: 12px;
 border-radius: 0px 0px 6px 6px;
 padding-top: 12px;
 }
+#header .popupLoginBox{
+    position:absolute;
+}
 /*
 ----- Main -----
 */
