--- a/data/stylesheets/orbui.css
+++ b/data/stylesheets/orbui.css
@@ -56,6 +56,8 @@ padding-top: 12px;
 }
 #header .popupLoginBox{
     position:absolute;
+    background:#efefef;
+    z-index:100;
 }
 /*
 ----- Main -----
