--- a/data/stylesheets/orbui.css
+++ b/data/stylesheets/orbui.css
@@ -310,6 +310,10 @@ table{
     border:none;
 }
 /*
+-- ZEBRA TABLE --
+             */
+table tbody tr:nth-child(even) { background: transparent; }
+/*
 ---  FORMS ---
               */
 form fieldset{
@@ -380,7 +384,6 @@ table#tsearch input{
     font-weight: bold;
     font-size: 13px;
     text-align:center;
-    border: 1px solid rgba(0,0,0,0.1);
     margin-bottom: 12px;
     border-radius: 3px;
     -webkit-border-radius: 3px;
