Aligning Related Entities forms

--- a/data/stylesheets/orbui.css
+++ b/data/stylesheets/orbui.css
@@ -134,9 +134,10 @@ table.attributeForm table#relatedEntities tr li{
 table.attributeForm table#relatedEntities tr li div a{
     padding-left:6px;
 }
-table.attributeForm table#relatedEntities th{
+table.attributeForm table#relatedEntities th,table.attributeForm table#relatedEntities td{
     margin:0;
     padding:0;
+    padding-left:6px;
 }
 table.attributeForm td{
     vertical-align:middle;
