--- a/data/stylesheets/orbui.css
+++ b/data/stylesheets/orbui.css
@@ -374,27 +374,8 @@ table#tsearch input{
     margin-left:10px;
 }
 /*
---- Messages ---
-              */
-#appMsg{/*nine columns*/
-    position: fixed;
-    right: 10px;
-    top: 10px;
-    width: 200px;
-    display: block;
-    padding: 6px 7px;
-    font-weight: bold;
-    font-size: 13px;
-    text-align:center;
-    border: 1px solid rgba(0,0,0,0.1);
-    margin-bottom: 12px;
-    border-radius: 3px;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-	background-color: #7fae00;
-    color: #fff;
-    text-shadow: 0 -1px rgba(0,0,0,0.3);
-}
+--- Messages inside #appMsg ---
+                             */
 #applmessagesComponent, div.msg {
     display: block;
     padding: 6px 7px;
@@ -409,6 +390,11 @@ table#tsearch input{
 	background-color: #7fae00;
     color: #fff;
     text-shadow: 0 -1px rgba(0,0,0,0.3);
+}
+#applmessagesComponent a{
+    font-weight:normal;
+    padding:0 5px;
+    color:#ddd;
 }
 /*
 ---  SiteConfig  ---
