--- a/data/stylesheets/orbui.css
+++ b/data/stylesheets/orbui.css
@@ -43,7 +43,7 @@ padding-right: 0 !important;
 text-align: center;
 margin-top: 12px;
 }
-#header_right #boxmenu_admin {
+#header .popupWrapper .popup {
 padding-left: 12px;
 padding-right: 12px;
 -moz-border-radius-topleft: 0px;
