--- a/data/stylesheets/orbui.css
+++ b/data/stylesheets/orbui.css
@@ -60,12 +60,25 @@ padding-top: 12px;
     z-index:100;
 }
 /*
+----- H Titles -----
+*/
+h1 { font-size: 35px; font-size: 3.5rem; margin-bottom: 12px; }
+h2 {
+    font-size: 28px;
+    font-size: 2.8rem;
+    margin-bottom: 12px;
+    border-bottom:1px solid #efefef;
+    padding-bottom:3px;
+}
+h3 { font-size: 21px; font-size: 2.1rem; margin-bottom: 3px; }
+h4 { font-size: 18px; font-size: 1.8rem; font-weight: normal; margin-bottom: 3px;  }
+h5 { font-size: 15px; font-size: 1.5rem; font-weight: normal; }
+/*
 ----- Main -----
 */
 div#main {
     min-height:400px;
 }
-
 .mainCol div.section{
     margin-bottom:6px;
 }
