--- a/data/orbui.css
+++ b/data/orbui.css
@@ -155,6 +155,9 @@ form#entityForm legend{
 .facet select {
     width: 40%;
 }
+a#facetBkLink{
+    text-decoration:none;
+}
 input.input-text, textarea{
     width:75%;
     min-width:150px;
