--- a/data/orbui.css
+++ b/data/orbui.css
@@ -1,14 +1,14 @@
 /*
 ---- Header -----
 */
-.sidebar-nav input{
+/*.sidebar-nav input{
     width:auto;
-}
-#header{
+}*/
+/*#header{
     padding-top:36px;
     margin-bottom:36px;
-}
-#header_center{
+}*/
+/*#header_center{
     margin-top:36px;
 }
 #header #logo{
