--- a/data/orbui.css
+++ b/data/orbui.css
@@ -152,3 +152,6 @@ h3.boxTitle{
 .prevnext a:hover{
     text-decoration:none;
 }
+.displayAllLink{ /*This class could be a button*/
+    margin:18px 0;
+}
