--- a/data/orbui.css
+++ b/data/orbui.css
@@ -155,3 +155,14 @@ h3.boxTitle{
 .displayAllLink{ /*This class could be a button*/
     margin:18px 0;
 }
+.pagination select{
+    border:0px;
+    width:88px;
+    color:#aaa;
+    font-size:14px;
+    padding:4px;
+}
+.pagination select:focus{
+    outline-offset:0;
+    outline:none;
+}
