--- a/data/orbui.css
+++ b/data/orbui.css
@@ -1,3 +1,89 @@
+/*!
+ * Copyright 2012 CreaLibre (Monterrey, MEXICO), all rights reserved.
+ * Contact http://www.crealibre.com/ -- mailto:info@crealibre.com
+ *
+ * This program is free software: you can redistribute it and/or modify it under
+ * the terms of the GNU Lesser General Public License as published by the Free
+ * Software Foundation, either version 2.1 of the License, or (at your option)
+ * any later version.
+ *
+ * This program is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ * FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more
+ * details.
+ *
+ * You should have received a copy of the GNU Lesser General Public License along
+ * with this program. If not, see <http://www.gnu.org/licenses/>..
+ */
+
+/* HEADER STYLES */
+/*-----------------------------------*/
+header#pageheader {
+    background: #f1f1f1;
+    padding-bottom: 5px;
+    border-bottom: 1px solid #CCCCCC;
+}
+@media (max-width: 768px) {
+    header#pageheader ul.breadcrumb, header#pageheader a.btn.btn-full {
+	display: none;
+    }
+}
+/* CONTEXTUAL TOOLBAR STYLES */
+/*-----------------------------------*/
+nav#toolbar .row {
+    background: #f1f1f1; /* Old browsers */
+    background: -moz-linear-gradient(top, #f1f1f1 0%, #e0e0e0 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f1f1f1), color-stop(100%,#e0e0e0)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, #f1f1f1 0%,#e0e0e0 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #f1f1f1 0%,#e0e0e0 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, #f1f1f1 0%,#e0e0e0 100%); /* IE10+ */
+    background: linear-gradient(top, #f1f1f1 0%,#e0e0e0 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f1f1f1', endColorstr='#e0e0e0',GradientType=0 ); /* IE6-9 */
+    -moz-border-radius-topleft: 0px;
+    -moz-border-radius-topright: 0px;
+    -moz-border-radius-bottomright: 6px;
+    -moz-border-radius-bottomleft: 6px;
+    -webkit-border-radius: 0px 0px 6px 6px;
+    border-radius: 0px 0px 6px 6px;
+    margin-top: -1px;
+    border: 1px solid #CCC;
+    border-top: 0px;
+}
+nav#toolbar ul.nav {
+    margin-bottom: 0px;
+}
+/* MAIN SECTION STYLES */
+/*-----------------------------------*/
+@media screen and (min-width: 768px) {
+    section#main .pull-right {
+	float: right;
+    }
+}
+/* ASIDE STYLES */
+/*-----------------------------------*/
+#aside-main{
+    padding-top: 50px;
+}
+/* FOOTER STYLES */
+/*-----------------------------------*/
+footer#pagefooter p.copyright {
+	text-align: center;
+}
+/* EXTRA SHARED STYLES */
+/*-----------------------------------*/
+.btn-full {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    display: block;
+    width: 100%;
+}
+/* Fixed modal window position on mobile resolutions. */
+@media screen and (max-width: 480px) {
+    div.modal.fade.in {
+	top: 12px;
+    }
+}
 /*
 ----- Main -----
 */
