--- a/data/orbui.css
+++ b/data/orbui.css
@@ -59,11 +59,6 @@ nav#toolbar ul.nav {
 	float: right;
     }
 }
-/* ASIDE STYLES */
-/*-----------------------------------*/
-#aside-main{
-    padding-top: 50px;
-}
 /* FOOTER STYLES */
 /*-----------------------------------*/
 footer#pagefooter p.copyright {
@@ -87,7 +82,8 @@ footer#pagefooter p.copyright {
 /*
 ----- Main -----
 */
-div#main {
+section#main {
+    padding-top:24px;
     min-height:400px;
 }
 .mainCol div.section{
