--- a/data/orbui.css
+++ b/data/orbui.css
@@ -89,6 +89,10 @@ section#main {
 .mainCol div.section{
     margin-bottom:6px;
 }
+ul {
+    list-style:none;
+    margin:0 0 9px 0;
+}
 th {
     font-weight:bold;
     font-size:100%;
