--- a/data/orbui.css
+++ b/data/orbui.css
@@ -202,6 +202,9 @@ form#entityForm legend{
 }
 /* LOGIN */
 /*-----------------------------------*/
+.modal .modal-header{
+    text-align:center;
+}
 .modal .modal-body{
 	padding: 0px;
 	margin-top: 32px;
