--- a/data/css/bootstrap.css
+++ b/data/css/bootstrap.css
@@ -1924,6 +1924,17 @@ button.btn.small, input[type="submit"].btn.small {
 .nav-list [class^="icon-"] {
   margin-right: 2px;
 }
+
+.nav-list .divider {
+  *width: 100%;
+  height: 1px;
+  margin: 8px 1px;
+  *margin: -5px 0 5px;
+  overflow: hidden;
+  background-color: #e5e5e5;
+  border-bottom: 1px solid #ffffff;
+}
+
 .nav-tabs, .nav-pills {
   *zoom: 1;
 }
