--- a/data/css/custom.css
+++ b/data/css/custom.css
@@ -11,7 +11,6 @@
   border-bottom: 1px solid #ffffff;
 }
 
-
 /* invisible class is used in bootsrapt, bet also in cw to handle relations in edition form  */
 li.invisible {
   visibility: visible;
@@ -31,11 +30,24 @@ li.invisible div{
 
 select {
   background-color: #FFFFFF;
-  border-radius: 3px 3px 3px 3px;
+  border-radius: 3px;
 }
 
+/* facets */
 .btn-facet{
-  margin-bottom: 9px
+  margin-bottom: 9px;
+ }
+
+.facet input,
+.facet select,
+.facet textarea {
+ width : auto;
+}
+
+div.facet{
+    /* border-radius: 4px 4px 4px 4px; */
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;
+    border: None;
  }
 
 /* pagination */
@@ -49,11 +61,6 @@ select {
 
 
 /******************* from cubicweb ********************/
-/* facets */
-
-.facet input {
- width : auto;
-}
 
 .hidden {
   display: none;
