--- a/data/orbui.css
+++ b/data/orbui.css
@@ -259,15 +259,15 @@ table.buttonbar{
 .facet_filterbox h3.boxTitle{
     margin:0 0 9px 0;
 }
-.facet input{
-    width: 90%;
-}
-.facet select {
-    width: 40%;
-    height: 20px;
-    padding-left:12px;
-    margin-bottom:9px;
-}
+/* .facet input{ */
+/*     width: 90%; */
+/* } */
+/* .facet select { */
+/*     width: 40%; */
+/*     height: 20px; */
+/*     padding-left:12px; */
+/*     margin-bottom:9px; */
+/* } */
 a#facetBkLink{
     text-decoration:none;
 }
@@ -366,7 +366,6 @@ h3.boxTitle{
 /*
 ----- Some Icons -----
                    */
-
 th.sortable {
   background: url("img/table_sortable.png") 0% 45% no-repeat;
   padding-left:20px;
