--- a/data/orbui.css
+++ b/data/orbui.css
@@ -128,14 +128,14 @@ th {
 /* Primary View */
 form .errorMsg{
     color: #B94A48;
-    background-color: #F2DEDE;
-    border-color: #EED3D7;
-    border-radius: 4px 4px 4px 4px;
-    margin-bottom: 18px;
-    padding: 8px 35px 8px 14px;
-    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
-    position:absolute;
-    left:40%;
+    /* background-color: #F2DEDE; */
+    /* border-color: #EED3D7; */
+    /* border-radius: 4px 4px 4px 4px; */
+    /* margin-bottom: 18px; */
+    /* padding: 8px 35px 8px 14px; */
+    /* text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5); */
+    /* position:absolute; */
+    /* left:40%; */
 }
 .navcontentbottom{
     margin-top: 36px;
