--- a/data/css/custom.css
+++ b/data/css/custom.css
@@ -1,11 +1,21 @@
 /* Your Custom CSS */
 /*-----------------------------------*/
 
+[class^="icon-"],
+[class*=" icon-"] {
+  background-image: url("../data/img/glyphicons-halflings.png");
+}
+
+.icon-white {
+  background-image: url("../data/img/glyphicons-halflings-white.png");
+}
+
 ul.breadcrumb{
  margin-bottom: 0;
  }
 
 .nav-list .divider {
+ /* same as .dropdown-menu .divider*/
   *width: 100%;
   height: 1px;
   margin: 8px 1px;
@@ -14,6 +24,11 @@ ul.breadcrumb{
   background-color: #e5e5e5;
   border-bottom: 1px solid #ffffff;
 }
+
+.dropdown-menu .action-category{
+  font-weight: bold;
+  padding-left: 6px;
+ }
 
 /* form v.2.0.0 */
 .form-horizontal .control-group > label {
