--- a/data/orbui.css
+++ b/data/orbui.css
@@ -101,6 +101,9 @@ footer#pagefooter p.copyright {
     display: block;
     width: 100%;
 }
+#loginBox .btn{
+    margin:0 5%;
+}
 /* Fixed modal window position on mobile resolutions. */
 @media screen and (max-width: 480px) {
     div.modal.fade.in {
