--- a/data/orbui.css
+++ b/data/orbui.css
@@ -219,10 +219,10 @@ form#entityForm legend{
 .releditField {
     display: inline;
 }
-.editableField { /*This allows the reledit pencil in HTML fields*/
+/* .editableField{ Use when reledit pencil goes at left
     margin-left: -10px;
     margin-top: -9px;
-}
+}*/
 /* LOGIN */
 /*-----------------------------------*/
 .modal .modal-header{
