[Forms] This Entity relations with more space

--- a/data/css/custom.css
+++ b/data/css/custom.css
@@ -124,11 +124,12 @@ div#progress {
 
 /* same as .form-horizontal .control-group > label */
 .form-horizontal .control-group > span.form-label {
+    display: block;
     float: left;
+    padding-right: 2%;
     padding-top: 5px;
     text-align: right;
-    width: 140px;
-    display: block;
+    width: 33%;
 }
 
 /* tables */
