--- a/data/orbui.css
+++ b/data/orbui.css
@@ -17,69 +17,19 @@
  */
 
 /* HEADER STYLES */
-/*-----------------------------------*/
+/*----------------------------------- */
 header#pageheader {
-    background: #f5f5f5;
+    padding-top: 60px;
     padding-bottom: 5px;
-    border-bottom: 1px solid #CCCCCC;
 }
 @media (max-width: 768px) {
     header#pageheader ul.breadcrumb, header#pageheader a.btn.btn-full {
-	display: none;
+	   display: none;
     }
-}
-/* CONTEXTUAL TOOLBAR STYLES */
-/*-----------------------------------*/
-nav#toolbar .row .span12{
-    background: #f5f5f5; /* Old browsers */
-    background: -moz-linear-gradient(top, #f5f5f5 0%, #e0e0e0 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f5f5f5), color-stop(100%,#e0e0e0)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, #f5f5f5 0%,#e0e0e0 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, #f5f5f5 0%,#e0e0e0 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top, #f5f5f5 0%,#e0e0e0 100%); /* IE10+ */
-    background: linear-gradient(top, #f5f5f5 0%,#e0e0e0 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#e0e0e0',GradientType=0 ); /* IE6-9 */
-    -moz-border-radius-topleft: 0px;
-    -moz-border-radius-topright: 0px;
-    -moz-border-radius-bottomright: 6px;
-    -moz-border-radius-bottomleft: 6px;
-    -webkit-border-radius: 0px 0px 6px 6px;
-    border-radius: 0px 0px 6px 6px;
-    margin-top: -1px;
-    border: 1px solid #CCC;
-    border-top: 0px;
-}
-nav#toolbar ul.nav {
-    margin-bottom: 0px;
-}
-nav#toolbar .dropdown-menu li{
-    padding-top:3px;
-    font-weight:bold;
-}
+} 
 
-nav#toolbar .dropdown-menu li.divider{
-    padding: 0;
-}
 
-nav#toolbar .pull-right .dropdown-menu {/*Fixing the Aling left Dropdown-Menu*/
-    left:auto;
-    right: 0;
-}
 
-nav#toolbar .pull-right .dropdown-menu:after {
-    left: auto;
-    right: 13px;
-}
-nav#toolbar .dropdown-menu:after {
-    border-bottom: 6px solid #FFFFFF;
-    border-left: 6px solid transparent;
-    border-right: 6px solid transparent;
-    content: "";
-    display: inline-block;
-    left: 10px;
-    position: absolute;
-    top: -6px;
-}
 /* MAIN SECTION STYLES */
 /*-----------------------------------*/
 @media screen and (min-width: 768px) {
@@ -114,16 +64,14 @@ footer#pagefooter p.copyright {
 ----- Main -----
 */
 section#main {
-    padding-top:24px;
+    padding-top: 24px;
     min-height:400px;
 }
 .mainCol div.section{
     margin-bottom:6px;
 }
-#pageContent h1{
-    margin-bottom:18px;
-    margin-left:9px;
-}
+
+
 ul {
     list-style:none;
     margin:0 0 9px 0;
@@ -134,12 +82,16 @@ th {
     line-height:18px;
     padding:12px;
 }
+
+
 p { /*This is Important for reledit viewing*/
   margin: 0;
 }
 table { /* for reledit viewing */
     width: 100%;
 }
+
+
 /* Primary View */
 form .errorMsg{
     color: #B94A48;
@@ -212,6 +164,11 @@ form#entityForm legend{
     border-bottom:1px solid #ddd;
     color:#aaa;
 }
+
+
+
+
+
 /* reledit fixing from CubicWeb CSS   */
 .releditForm {
  display:none;
@@ -248,6 +205,21 @@ form#entityForm legend{
 #loginForm fieldset.default{
     margin-left: 15px;
 }
+
+#loginForm div.form-actions {
+    margin-bottom: 0px;
+    background: transparent;
+}
+
+#loginForm button.btn {
+    float: right;
+    margin-left: 10px;
+}
+
+#loginForm input.data {
+    
+}
+
 /* Primary View */
 .primary_entities div.row-fluid{
     border-bottom:1px dotted #cecece;
